send msn
