# app/Query/Request/CommerceQuery.php
@@ -11,8 +11,9 @@ class CommerceQuery implements ICommerceQuery{
     public function index(){
         return response()->json(['message' => 'Commerce Index!'], 201);
     }
-    public function show(Int $id){
-        return response()->json(['message' => 'Commerce Show!'], 201);
+    public function show(Request $request, Int $id){
+        $user = $request->user();
+        return response()->json($user->commerce);
     }
     public function store(Request $request){
         return response()->json(['message' => 'Commerce store!'], 201);
