# storage/api-docs/api-docs.json
@@ -199,6 +199,61 @@
     },
     "components": {
         "schemas": {
+            "Commerce": {
+                "title": "Commerce",
+                "description": "Commerce body data",
+                "properties": {
+                    "name": {
+                        "title": "name",
+                        "description": "Name of the user",
+                        "type": "string",
+                        "example": "TempoSolutions"
+                    },
+                    "department": {
+                        "title": "department",
+                        "description": "Department of the commerce",
+                        "type": "string",
+                        "example": "Antioquia"
+                    },
+                    "city": {
+                        "title": "city",
+                        "description": "Name of the commerce",
+                        "type": "string",
+                        "example": "Medellin"
+                    },
+                    "adress": {
+                        "title": "adress",
+                        "description": "adress of the commerce",
+                        "type": "string",
+                        "example": "Cll 60 # 75 - 150"
+                    },
+                    "description": {
+                        "title": "description",
+                        "description": "description of the commerce",
+                        "type": "string",
+                        "example": "super"
+                    },
+                    "logo": {
+                        "title": "logo",
+                        "description": "Logo of the commerce",
+                        "type": "string",
+                        "example": "default.png"
+                    },
+                    "currency": {
+                        "title": "currency",
+                        "description": "currency of the commerce",
+                        "type": "string",
+                        "example": "COP"
+                    },
+                    "label": {
+                        "title": "label",
+                        "description": "label of the commerce",
+                        "type": "string",
+                        "example": "{}}"
+                    }
+                },
+                "type": "object"
+            },
             "User": {
                 "title": "User",
                 "description": "User body data",
